Fix body overflow

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,5 @@
 
 body {
   background-color: #f6f6f6;
-  overflow: hidden;
   position: relative;
 }
